--- a/.travis.yml
+++ b/.travis.yml
@@ -11,3 +11,11 @@ install:
 
 script:
  - mvn test -B
+
+deploy:
+  provider: script
+  script: bash .travis.after_success.sh
+  on:
+    branch: snapshot
+
+
