--- a/vaadin-bom/pom.xml
+++ b/vaadin-bom/pom.xml
@@ -13,31 +13,31 @@
     <url>http://vaadin.com</url>
 
     <properties>
-        <flow.version>1.0.0.beta2</flow.version>
+        <flow.version>1.0-SNAPSHOT</flow.version>
 
-        <vaadin.button.flow.version>1.0.0.beta1</vaadin.button.flow.version>
-        <vaadin.checkbox.flow.version>1.0.0.beta1</vaadin.checkbox.flow.version>
-        <vaadin.combo.box.flow.version>1.0.0.beta1</vaadin.combo.box.flow.version>
-        <vaadin.date.picker.flow.version>1.0.0.beta2</vaadin.date.picker.flow.version>
-        <vaadin.dialog.flow.version>1.0.0.beta1</vaadin.dialog.flow.version>
-        <vaadin.form.layout.flow.version>1.0.0.beta1</vaadin.form.layout.flow.version>
-        <vaadin.grid.flow.version>1.0.0.beta2</vaadin.grid.flow.version>
-        <vaadin.icons.flow.version>1.0.0.beta1</vaadin.icons.flow.version>
-        <vaadin.iron.list.flow.version>1.0.0.beta2</vaadin.iron.list.flow.version>
-        <vaadin.list.box.flow.version>1.0.0.beta1</vaadin.list.box.flow.version>
-        <vaadin.notification.flow.version>1.0.0.beta1</vaadin.notification.flow.version>
-        <vaadin.ordered.layout.flow.version>1.0.0.beta1</vaadin.ordered.layout.flow.version>
-        <vaadin.progress.bar.flow.version>1.0.0.beta1</vaadin.progress.bar.flow.version>
-        <vaadin.radio.button.flow.version>1.0.0.beta1</vaadin.radio.button.flow.version>
-        <vaadin.split.layout.flow.version>1.0.0.beta1</vaadin.split.layout.flow.version>
-        <vaadin.tabs.flow.version>1.0.0.beta1</vaadin.tabs.flow.version>
-        <vaadin.text.field.flow.version>1.0.0.beta1</vaadin.text.field.flow.version>
-        <vaadin.upload.flow.version>1.0.0.beta3</vaadin.upload.flow.version>
+        <vaadin.button.flow.version>1.0-SNAPSHOT</vaadin.button.flow.version>
+        <vaadin.checkbox.flow.version>1.0-SNAPSHOT</vaadin.checkbox.flow.version>
+        <vaadin.combo.box.flow.version>1.0-SNAPSHOT</vaadin.combo.box.flow.version>
+        <vaadin.date.picker.flow.version>1.0-SNAPSHOT</vaadin.date.picker.flow.version>
+        <vaadin.dialog.flow.version>1.0-SNAPSHOT</vaadin.dialog.flow.version>
+        <vaadin.form.layout.flow.version>1.0-SNAPSHOT</vaadin.form.layout.flow.version>
+        <vaadin.grid.flow.version>1.0-SNAPSHOT</vaadin.grid.flow.version>
+        <vaadin.icons.flow.version>1.0-SNAPSHOT</vaadin.icons.flow.version>
+        <vaadin.iron.list.flow.version>1.0-SNAPSHOT</vaadin.iron.list.flow.version>
+        <vaadin.list.box.flow.version>1.0-SNAPSHOT</vaadin.list.box.flow.version>
+        <vaadin.notification.flow.version>1.0-SNAPSHOT</vaadin.notification.flow.version>
+        <vaadin.ordered.layout.flow.version>1.0-SNAPSHOT</vaadin.ordered.layout.flow.version>
+        <vaadin.progress.bar.flow.version>1.0-SNAPSHOT</vaadin.progress.bar.flow.version>
+        <vaadin.radio.button.flow.version>1.0-SNAPSHOT</vaadin.radio.button.flow.version>
+        <vaadin.split.layout.flow.version>1.0-SNAPSHOT</vaadin.split.layout.flow.version>
+        <vaadin.tabs.flow.version>1.0-SNAPSHOT</vaadin.tabs.flow.version>
+        <vaadin.text.field.flow.version>1.0-SNAPSHOT</vaadin.text.field.flow.version>
+        <vaadin.upload.flow.version>1.0-SNAPSHOT</vaadin.upload.flow.version>
 
-        <testbench.version>6.0.0.beta1</testbench.version>
-        <vaadin.components.testbench.version>1.0.0.beta1</vaadin.components.testbench.version>
-        <charts.version>6.0.0.beta1</charts.version>
-        <board.version>1.0.0.beta2</board.version>
+        <testbench.version>6.0-SNAPSHOT</testbench.version>
+        <vaadin.components.testbench.version>1.0-SNAPSHOT</vaadin.components.testbench.version>
+        <charts.version>6.0-SNAPSHOT</charts.version>
+        <board.version>1.0-SNAPSHOT</board.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
